Patch 2/2: TUM optimizations + FCUL bugfixes